various bugfixes on parameters modules + adding default NoZebraIndexes systempreference if it's empty

--- a/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
@@ -57,6 +57,10 @@
 	<td>Define issuing rules in a matrix for branches / borrowers / item types (number of issues, duration, cost...).</td>
 </tr>
 <tr>
+	<td><a href="/cgi-bin/koha/admin/finesrules.pl">Fines rules</a></td>
+	<td>Define fines in a matrix for branches / borrowers / item types (cost, grace period...).</td>
+</tr>
+<tr>
 <th colspan="2">Catalogue</th>
 </tr>
 <tr>
