--- a/koha-tmpl/intranet-tmpl/prog/en/admin/currency.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/currency.tmpl
@@ -98,7 +98,7 @@
 		</tr>
         </table>
 		
-		<input type="button" value="Update" onClick="Check(this.form)" /> <input type="button" value="Cancel" onclick="location.href='<!-- TMPL_VAR NAME="script_name" -->'; return false;" />
+		<input type="button" value="OK" onClick="Check(this.form)" /> <input type="button" value="Cancel" onclick="location.href='<!-- TMPL_VAR NAME="script_name" -->'; return false;" />
         </form>
 
 <!-- /TMPL_IF -->
