bug fixing : modify wrong  date format display

--- a/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
@@ -258,7 +258,7 @@
             <td><!-- TMPL_VAR Name="itemtype" --> <!-- TMPL_VAR Name="ccode" --></td>
             <td>
             <!-- TMPL_IF Name="duedate" -->
-                <!-- TMPL_IF Name="early" --><!-- /TMPL_IF --><!-- TMPL_VAR Name="month" -->/<!-- TMPL_VAR Name="day" -->/<!-- TMPL_VAR Name="year" --><!-- TMPL_IF Name="early" --></span><!-- /TMPL_IF -->
+                <!-- TMPL_IF Name="early" --><!-- /TMPL_IF --><!-- TMPL_VAR Name="year" -->/<!-- TMPL_VAR Name="month" -->/<!-- TMPL_VAR Name="day" --><!-- TMPL_IF Name="early" --></span><!-- /TMPL_IF -->
             <!-- TMPL_ELSE -->
                 Not on Issue.
             <!-- /TMPL_IF -->
