minor bugfixing for reservations

--- a/koha-tmpl/intranet-tmpl/prog/en/reserve/request.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reserve/request.tmpl
@@ -100,7 +100,7 @@ if (alreadyreserved > "0"){
     <br>
     <p class="problem">
       <label><u>Too many reserves</u></label>
-      Currently, this member has <!-- TMPL_VAR NAME="borrowerreservs" --> active reserves.
+      Currently, this member has too much active reserves.
     </p>
     <!-- /TMPL_IF -->
 
