Adding redirection to serials-collection.pl if no serials selected for edition.

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/serials-collection.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/serials-collection.tmpl
@@ -233,15 +233,15 @@ function popup(link) {
                   <input type="checkbox" name="serialid" value="<!--TMPL_VAR Name="serialid"-->" disabled />
                   <!--TMPL_ELSE-->
                     <!--TMPL_IF Name="status1"-->
-                    <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->" onclick="javascript:addsubscriptionid();"/>
+                    <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->"/>
                     <!--TMPL_ELSE -->
                     <!--TMPL_IF Name="status3"-->
-                    <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->" onclick="javascript:addsubscriptionid();"/>
+                    <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->" />
                     <!--TMPL_ELSE -->
                       <!--TMPL_IF Name="status4"-->
-                      <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->" onclick="javascript:addsubscriptionid();"/>
+                      <input type="checkbox" name="serialid" checked value="<!--TMPL_VAR Name="serialid"-->" />
                       <!--TMPL_ELSE -->
-                      <input type="checkbox" name="serialid" value="<!--TMPL_VAR Name="serialid"-->" onclick="javascript:addsubscriptionid();"/>
+                      <input type="checkbox" name="serialid" value="<!--TMPL_VAR Name="serialid"-->" />
                       <!--/TMPL_IF-->           
                     <!--/TMPL_IF-->           
                     <!--/TMPL_IF-->           
