--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
@@ -370,12 +370,29 @@ function active(numlayer)
     }
 }
 
-function confirm_deletion() {
-    var is_confirmed = confirm('Are you sure you want to delete this biblio?');
-    if (is_confirmed) {
-        window.location="../cataloguing/addbiblio.pl?op=delete&biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+function confirm_deletion(count) {
+    //     var is_confirmed = confirm('Are you sure you want to delete this biblio?');
+//     if (is_confirmed) {
+//         window.location="../cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+//     }
+ var is_confirmed;
+	if (count>0){
+		    is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
+		    }
+        else{
+		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
+	}
+
+    
+     if (is_confirmed) {
+        if (count=0){
+// 	window.location="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+	window.location="/cgi-bin/koha/cataloguing/addbiblio.pl?op=delete&amp;biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->";
+	}
+		
     }
-}
+    }
+
 function Dopop(link) {
     newin=window.open(link,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
 }
